--- a/energey.qmd
+++ b/energey.qmd
@@ -62,7 +62,8 @@ import itables
 itables.show(df2,showIndex=False)
 ```
 
-# 시각화 {orientation="columns" scrolling="true"}
+# 시각화 <!-- {orientation="columns" scrolling="true"} -->
+
 
 ## Row {height=60%}
 
